# python-devops-sccs

./: .gitignore  PLUGINS_LICENSE-2.0.txt  README.rst  pyproject.toml  requirements_test.txt  setup.py
devops_sccs/: __init__.py  accesscontrol.py  ats_cache.py  atscached.py  cache.py  client.py  context.py  core.py  errors.py  plugin.py  provision.py  redis.py
devops_sccs/plugins/: bitbucketcloud.py  cache_keys.py  demo.py
devops_sccs/plugins/schemas/: bitbucket.py
devops_sccs/realtime/: hookclient.py  hookserver.py  scheduler.py  watcher.py
devops_sccs/schemas/: config.py
devops_sccs/typing/: __init__.py  cd.py  compliance.py  credentials.py  event.py  hook.py  repositories.py
devops_sccs/utils/: __init__.py  aioify.py  cd.py
tests/: bitbucketcloud_test.py  cachetest_core.py  cachetest_plugina.py  cachetest_server.py  test_ats_cache.py  test_atscached.py
